  -NEW (build): try really hard to search proper boost libraries. One usually
  -NEW (build): prune files from source package
    does not have to specify boost inc and lib paths to build simuPOP.
  -NEW: MPI module pass 00, 01, 06 test scripts
  -NEW: Only head node can print to cout
  -NEW: add ancestralGen to penetrance and qtrait operators
  

version 0.7.6 - (Rev 674) Dec 25, 2006
  -NEW: change file format for binary modules, resulting much faster save/load.
  -NEW: fix adjustGenotype (efficiency)
  -BUG: fix simulator::clone(), introduced in 0.7.5
  -NEW: disable compression under windows due to a boost bug.
  -BUG: make simuRPy works with the latest R and rpy.
  -NEW: several new chapters in the user's guide.


version 0.7.5 - (Rev 576) Dec 8, 2006
  - NEW: experimental MPI modules.
  - BUG: None is treated as False now in Py_Object_As_Bool.
  - NEW: (internal) Optimize binary allele handling. Copying of alleles are now
		faster than regular alleles.
  - NEW (internal): Optimize BernulliTrials and recombination. Recombination
		under certain conditions is 1/3 faster now.
  - NEW (internal): Using vector<bool> instead of dynamic_bitset for BernulliTrials
	    cache internal point for performance purposes. This also fixes a windows
		dynamic_bitset related bug (never figure out what was wrong).
  - NEW: add the missing simulator.clone() function
  - CHG: stop embedding zlib since the source does not work under windows.
		The installation process is changed as well.


version 0.7.4 - (Rev 518) Nov 5, 2006
  - BUG: fix simulator.population() function
  - NEW/CHG: add order parameter to population arr function series.
	Changed functions are:
		C++ level: population::genoBegin(true), genoBegin(sp, true)
			population::infoBegin(idx, order), infoBegin(idx, subPop, order)
		Python level: population::arrGenotype(True), arrGenotype(sp, True)
			population::indInfo(idx, order), indInfo(idx, subPop, order)
			population::arrIndInfo(order), arrIndInfo(subPop, order)